# furosimspark

Agente java/: ServerCommunication.java
agentepython/: agent.py
rcssserver3d/: CMakeLists.txt  kill.sh  start.sh
rcssserver3d/linux/: FuroSimspark.desktop  rcssserver3d.desktop
rcssserver3d/rcssagent3d/: CMakeLists.txt  carbehavior.cpp  carbehavior.h  main.cpp  playmode.h  soccerbehavior.cpp  soccerbehavior.h  soccerperceptor.cpp  soccerperceptor.h
rcssserver3d/rcssagent3d/estrategias/: crearJugador.cpp  crearJugador.h  sbarquero.cpp  sbarquero.h  sbdefensa.cpp  sbdefensa.h  sbdelantero.cpp  sbdelantero.h  soccerbehavior.h  soccerperceptor.cpp  soccerperceptor.h
rcssserver3d/rcssagent3d/estrategias/leftFuroBlue/: sbarquerol.cpp  sbarquerol.h  sbdefensal.cpp  sbdefensal.h  sbdelanterol.cpp  sbdelanterol.h
rcssserver3d/rcssagent3d/estrategias/rightFuroRed/: sbarqueror.cpp  sbarqueror.h  sbdefensar.cpp  sbdefensar.h  sbdelanteror.cpp  sbdelanteror.h
rcssserver3d/rcssmonitor3d/: rcssmonitor3d.rb
rcssserver3d/rcssserver3d/: rcssserver3d.rb  soccersim.rb
rsgedit/src/: agentframe.cpp  agentframe.h  constants.cpp  constants.h  inputwx.cpp  inputwx.h  kinematicframe.cpp  kinematicframe.h  main.cpp  main.h  mainframe.cpp  mainframe.h  platform.cpp  platform.h  property.cpp  property.h  propertyframe.cpp  propertyframe.h  propertylist.cpp  propertylist.h  simspark.cpp  simspark.h  sparkcontext.cpp  sparkcontext.h  sparkcontextevent.cpp  sparkcontextevent.h  sparkedit.cpp  sparkedit.h  sparkglcanvas.cpp  sparkglcanvas.h  sparkglrender.cpp  sparkglrender.h  sparktree.cpp  sparktree.h
spark/carbon/: aboutdialog.h  (+9 more)
(+297 files in other folders)
